<?xml version="1.0" encoding="utf-8"?><!--
    *    Team15Alpha
    *    AppName: SkillTradiez (Subject to change)
    *    Copyright (C) 2015  Stephen Andersen, Falon Scheers, Elyse Hill, Noah Weninger, Cole Evans
    *
    *    This program is free software: you can redistribute it and/or modify
    *    it under the terms of the GNU General Public License as published by
    *    the Free Software Foundation, either version 3 of the License, or
    *    (at your option) any later version.
    *
    *    This program is distributed in the hope that it will be useful,
    *    but WITHOUT ANY WARRANTY; without even the implied warranty of
    *    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    *    GNU General Public License for more details.
    *
    *    You should have received a copy of the GNU General Public License
    *    along with this program.  If not, see <http://www.gnu.org/licenses/>.
    -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.skilltradiez.skilltraderz.EditSkill">

    <TextView
        android:id="@+id/Name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/titlebar"
        android:textColor="@color/mainBackground"
        android:text="@string/name"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/new_skill_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/Name"
        android:hint="@string/new_skill_name"
        android:maxLength="30"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/mainTextColor" />

    <TextView
        android:id="@+id/Desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/mainBackground"
        android:background="@drawable/titlebar"
        android:text="@string/desc"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_below="@+id/new_skill_name"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:id="@+id/new_skill_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/new_skill_description"
        android:inputType="textMultiLine"
        android:maxLines="4"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:maxLength="250"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/mainTextColor"
        android:layout_below="@+id/Desc"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />

    <CheckBox
        android:id="@+id/is_visible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:checked="true"
        android:text="@string/is_visible"
        android:textColor="@color/mainTextColor" />

    <Button
        android:id="@+id/add_skill_to_database"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:textColor="@color/listLightYellow"
        android:background="@drawable/button"
        android:onClick="addNewSkill"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:text="@string/add_skill"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/Category_Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/mainBackground"
        android:background="@drawable/titlebar"
        android:text="@string/category_title"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_below="@+id/new_skill_description"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true" />

    <Spinner
        android:id="@+id/category_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:spinnerMode="dropdown"
        android:layout_below="@+id/Category_Title"
        android:layout_alignParentEnd="true" />


    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/scrollingcats"
        android:layout_below="@+id/category_spinner"
        android:layout_alignParentEnd="true"
        android:layout_above="@+id/add_skill_to_database">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/Category_Title"
            android:layout_alignParentEnd="true">

            <TextView
                android:id="@+id/Rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentStart="false"
                android:textColor="@color/mainBackground"
                android:layout_marginLeft="2dp"
                android:layout_toRightOf="@+id/imageList"
                android:background="@drawable/titlebar"
                android:text="@string/rating"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/imageList"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                android:layout_below="@+id/Rating">

                <RadioButton
                    android:id="@+id/radioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="EPIC"
                    android:textColor="@color/listLightYellow" />

                <RadioButton
                    android:id="@+id/radioButton2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Great"
                    android:textColor="@color/listLightYellow" />

                <RadioButton
                    android:id="@+id/radioButton3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Okay"
                    android:textColor="@color/listLightYellow" />

                <RadioButton
                    android:id="@+id/radioButton4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Mediocre"
                    android:textColor="@color/listLightYellow" />

                <RadioButton
                    android:id="@+id/radioButton5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Poor"
                    android:textColor="@color/listLightYellow" />
            </RadioGroup>

            <ImageButton
                android:id="@+id/takeImage"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:background="@drawable/titlebar"
                android:contentDescription="@string/photo_alt"
                android:onClick="addNewImage"
                android:paddingBottom="5dp"
                android:src="@drawable/ic_action_image_camera_alt"
                android:layout_alignTop="@+id/Rating" />

            <ListView
                android:id="@+id/imageList"
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/takeImage"
                android:layout_alignRight="@+id/takeImage"
                android:layout_below="@+id/takeImage"
                android:layout_centerVertical="true"
                android:background="@drawable/photoview"
                android:layout_alignBottom="@+id/radioGroup" />

        </RelativeLayout>
    </ScrollView>

</RelativeLayout>
