<?xml version="1.0" encoding="utf-8"?>
<!--
    *    Team15Alpha
    *    AppName: SkillTradiez (Subject to change)
    *    Copyright (C) 2015  Stephen Andersen, Falon Scheers, Elyse Hill, Noah Weninger, Cole Evans
    *
    *    This program is free software: you can redistribute it and/or modify
    *    it under the terms of the GNU General Public License as published by
    *    the Free Software Foundation, either version 3 of the License, or
    *    (at your option) any later version.
    *
    *    This program is distributed in the hope that it will be useful,
    *    but WITHOUT ANY WARRANTY; without even the implied warranty of
    *    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    *    GNU General Public License for more details.
    *
    *    You should have received a copy of the GNU General Public License
    *    along with this program.  If not, see <http://www.gnu.org/licenses/>.
    -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:skillz="http://schemas.android.com/apk/res-auto">

    <item
        android:title=""
        android:id="@+id/BLANK_SPACE"
        skillz:showAsAction="always" />
    <item
        android:id="@+id/Go_Profile_Menu"
        android:icon="@drawable/ic_person"
        android:title="@string/go_profile"
        skillz:showAsAction="always" />
    <item
        android:id="@+id/Go_Home_Menu"
        android:icon="@drawable/ic_home"
        android:title="@string/go_home_menu"
        skillz:showAsAction="always" />
    <item
        android:id="@+id/Go_Make_Skill"
        android:title="@string/go_make_skill"
        android:icon="@drawable/sk_plus"
        skillz:showAsAction="always" />
    <item
        android:id="@+id/Go_To_Settings"
        android:title="@string/go_to_settings"
        android:icon="@drawable/ic_settings"
        skillz:showAsAction="always" />
    <item
        android:title=""
        android:id="@+id/BLANK_SPACE2"
        skillz:showAsAction="always" />

</menu>