...
    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|fill_horizontal">

        <EditText
            android:id="@+id/search_bar"
            android:layout_width="276dp"
            android:layout_height="30dp"
            android:layout_gravity="start|center"
            android:background="@drawable/search_bar"
            android:hint="@string/search_field_text"
            android:imeOptions="actionSearch"
            android:inputType="text"
            android:paddingLeft="5dp"
            android:visibility="invisible" />

        <ImageButton
            android:id="@+id/search_bar_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center_vertical"
            android:background="@drawable/iconshape"
            android:src="@drawable/ic_search"
            android:visibility="invisible" />
...
